# L2JIMP2

./: CMakeLists.txt  Makefile  api_comm.c  api_comm.h  csrrg.c  documentaryEng.md  documentaryPl.md  graf.txt  graph_gen  graph_generator.c  graph_matrix.c  graph_matrix.h  main.c  output.txt  partition.c  partition.h  podzial.txt  tester  tester.c  utils.c  utils.h
Include/curl/curl-8.12.1/: CMakeLists.txt
Include/curl/curl-8.12.1/docs/: CMakeLists.txt
Include/curl/curl-8.12.1/docs/cmdline-opts/: CMakeLists.txt
Include/curl/curl-8.12.1/docs/libcurl/: CMakeLists.txt
Include/curl/curl-8.12.1/lib/: CMakeLists.txt
Include/curl/curl-8.12.1/src/: CMakeLists.txt
Include/curl/curl-8.12.1/tests/: CMakeLists.txt
Include/curl/curl-8.12.1/tests/certs/: CMakeLists.txt
Include/curl/curl-8.12.1/tests/libtest/: CMakeLists.txt
Include/curl/curl-8.12.1/tests/unit/: CMakeLists.txt
